Set acces public

--- a/libs/is-even/package.json
+++ b/libs/is-even/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@damianpm/is-even",
-  "version": "0.0.2",
+  "version": "0.0.6",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/damianpm/is-even.git"
+    "url": "git+https://github.com/damianpm/nx-integrated.git"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com",
+    "access": "public"
   },
   "private": false
 }
